Create the first js lesson page and the style sheet

--- a/index.html
+++ b/index.html
@@ -4,13 +4,12 @@
 <!-- Note: maybe implement vw later -->
 
 <head>
-
     <meta charset="utf-8" />
-    <meta name="keywords" content="HTML, CSS, JavaScript, Java, Python">
-    <meta name="description" content="Free programming tutorials">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="HTML, CSS, JavaScript, Java, Python" />
+    <meta name="description" content="Free programming tutorials" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;1,500&display=swap"
-        rel="stylesheet">
+        rel="stylesheet" />
     <title>Next Gen Stem</title>
     <style>
         body {
@@ -220,7 +219,7 @@
     <nav class="nav-bottom">
         <ul>
             <!-- TODO: Fill in links once we get the courses up -->
-            <li><a href="#" class="nav-bottom-link" id="javascript">JAVASCRIPT</a></li>
+            <li><a href="javascript/js1.html" class="nav-bottom-link" id="javascript">JAVASCRIPT</a></li>
 
             <li><a href="#" class="nav-bottom-link" id="htmlcss">HTML + CSS</a></li>
 
