Edit the style css and link index.html to it

--- a/javascript/js1.html
+++ b/javascript/js1.html
@@ -11,6 +11,13 @@
     <title>JavaScript Part 1</title>
 </head>
 <body>
-    
+    <nav class="nav-top">
+        <ul class="nav-top-ul">
+            <!-- TODO: Fill in links -->
+            <li><b><a href="#" class="nav-top-link">Home</a></b></li>
+            <li><b><a href="#" class="nav-top-link">Learn to Code</a></b></li>
+            <li><b><a href="#" class="nav-top-link">About</a></b></li>
+        </ul>
+    </nav>
 </body>
 </html>
