--- a/index.html
+++ b/index.html
@@ -10,218 +10,46 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;1,500&display=swap"
         rel="stylesheet" />
+    <link rel="stylesheet" href="style.css">
     <title>Next Gen Stem</title>
-    <style>
-        body {
-            background: "ffffff";
-            font-family: Montserrat, Helvetica, arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-
-        }
-
-        /* Style the top nav bar with flexbox */
-        .nav-top {
-            background: #033254;
-            padding: 40px;
-            display: flex;
-            flex-direction: row;
-            justify-content: center;
-            overflow: hidden;
-        }
-
-        /* Style the top nav bar links */
-        .nav-top-link {
-            float: left;
-            display: block;
-            color: rgb(255, 255, 255);
-            text-align: center;
-            text-decoration: none;
-            padding: 10px 20px;
-            margin: 3px;
-            font-size: 20px;
-        }
-
-        /* Change the color of the links when hovred over */
-        .nav-top-link:hover {
-            background-color: #ffffff;
-            color: #033254;
-            transition-duration: .1s;
-            border-radius: 2px;
-        }
-
-        ul {
-            display: flex;
-            justify-content: center;
-            flex-wrap: wrap;
-            margin: 0;
-            padding: 0;
-            list-style-type: none;
-        }
-
-        ul li {
-            display: list-item;
-        }
-
-        header {
-            background-image: url("images/ezgif.com-video-to-gif.gif");
-            background-size: cover;
-            background-position: inherit;
-            height: 600px;
-            justify-content: center;
-            font-size: 100px;
-            color: rgb(255, 255, 255);
-            padding-top: 200px;
-            padding-bottom: 100px;
-            text-align: center;
-        }
-
-        button {
-
-            font-size: 20px;
-            padding: 7px;
-            font-family: 'Montserrat', Helvetica, sans-serif;
-            background-color: ffffff;
-            color: #000000;
-            text-align: center;
-            align-items: center;
-            border: 0px;
-            border-radius: 3px;
-            width: 190px;
-        }
-
-        button:hover {
-            background-color: #e6e6e6;
-            color: #033254;
-        }
-
-        /* Make header h1 bigger */
-        header h1 {
-            font-size: 70px;
-        }
-
-        section p {
-            margin-left: 100px;
-            margin-right: 100px;
-            margin-top: 30px;
-            margin-bottom: 30px;
-            font-size: 30px;
-            color: #080808;
-        }
-
-        h2 {
-            margin-top: 80px;
-            text-align: center;
-            color: #033254;
-            font-size: 25px;
-        }
-
-        /* Style the bottom nav bar with flexbox */
-        .nav-bottom {
-            background: rgb(155, 155, 155);
-            padding: 40px;
-            display: flex;
-            flex-direction: row;
-            flex-wrap: wrap;
-            justify-content: center;
-            overflow: hidden;
-        }
-
-        /* Style the bottom nav bar links */
-        .nav-bottom-link {
-            float: left;
-            display: block;
-            color: rgb(255, 255, 255);
-            text-align: center;
-            text-decoration: none;
-            font-weight: bold;
-            font-size: 24px;
-            width: 200px;
-            padding: 100px 100px;
-            margin: 3px;
-        }
-
-        /* Additional css for the images of each of the course links*/
-        #javascript {
-            background: url(images/4906597504_d3d1ee9274_b.jpg) no-repeat;
-            background-size: cover;
-        }
-
-        #htmlcss {
-            background: url(images/desk-keyboard-mouse-white.jpg) no-repeat;
-            background-size: cover;
-            background-position-y: center;
-        }
-
-        #python {
-            background: url(images/laptopngt.jpg) no-repeat;
-            background-size: cover;
-            background-position-y: center;
-        }
-
-        #java {
-            background: url(images/ordinateur-apple-ipad.jpg) no-repeat;
-            background-size: cover;
-            background-position-y: center;
-        }
-
-        footer {
-            padding: 20px;
-            background: #033254;
-            text-align: center;
-            color: #f0f8ff;
-        }
-
-        p {
-            font-size: 24px;
-        }
-    </style>
 </head>
 
 <body>
-
-
     <nav class="nav-top">
-        <ul>
+        <ul class="nav-top-ul">
             <!-- TODO: Fill in links -->
             <li><b><a href="#" class="nav-top-link">Home</a></b></li>
             <li><b><a href="#" class="nav-top-link">Learn to Code</a></b></li>
             <li><b><a href="#" class="nav-top-link">About</a></b></li>
         </ul>
     </nav>
-    <header>
+    <header class="homepage-header">
         <h1>NEXT GEN STEM</h1>
-        <p>Leading the next generation of STEM students</p>
-        <nav>
-            <ul>
-                <a href="myblog.html"><button>Learn to Code</button></a>
-            </ul>
-        </nav>
+        <p class="homepage-header-p">Leading the next generation of STEM students</p>
+        <a href="#"><button class="header-button">Learn to Code</button></a>
     </header>
     <section>
-        <p>
+        <p class="homepage-p">
             Next Gen STEM is a completely free resource made to
             encourage students to learn computer programming,
             a skill that is indispensable in a world increasingly
             dependent on software and technology.
         </p>
-        <p>
+        <p class="homepage-p">
             Utilizing video, written, and live chat instruction
             (through the icon on the bottom right of your screen)
             Next Gen STEM provides learning resources that fit the needs of any student.
         </p>
-        <h2>
-            <b>
-                LEARN TO CODE TODAY</b>
+        <h2 class="homepage-h2">
+            <b>LEARN TO CODE TODAY</b>
         </h2>
     </section>
     <nav class="nav-bottom">
-        <ul>
+        <ul class="nav-bottom-ul">
             <!-- TODO: Fill in links once we get the courses up -->
             <li><a href="javascript/js1.html" class="nav-bottom-link" id="javascript">JAVASCRIPT</a></li>
 
-            <li><a href="#" class="nav-bottom-link" id="htmlcss">HTML + CSS</a></li>
+            <li><a href="#" class="nav-bottom-link" id="htmlcss">HTML+CSS</a></li>
 
             <li><a href="#" class="nav-bottom-link" id="python">PYTHON</a></li>
 
