Used media querries to make website look better on smaller screens

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
     </nav>
     <header class="homepage-header">
         <h1>NEXT GEN STEM</h1>
-        <p class="homepage-header-p">Leading the next generation of STEM students</p>
-        <a href="#"><button class="header-button">Learn to Code</button></a>
+        <p>Leading the next generation of STEM students</p>
+        <a href="#"><button class="homepage-header-button">Learn to Code</button></a>
     </header>
     <section>
         <p class="homepage-p">
