--- a/javascript/js1.html
+++ b/javascript/js1.html
@@ -1,5 +1,3 @@
-<!DOCTYPE html>
-<html lang="en-US">
 <head>
     <meta charset="utf-8" />
     <meta name="keywords" content="HTML, CSS, JavaScript, Java, Python" />
@@ -7,9 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;1,500&display=swap"
         rel="stylesheet" />
-    <link rel="stylesheet" href="style.css" />
-    <title>JavaScript Part 1</title>
+    <link rel="stylesheet" href="../style.css" />
+    <title>Next Gen Stem</title>
 </head>
+
 <body>
     <nav class="nav-top">
         <ul class="nav-top-ul">
@@ -19,5 +18,11 @@
             <li><b><a href="#" class="nav-top-link">About</a></b></li>
         </ul>
     </nav>
+    
+    <footer>
+        <p>
+            NEXT GEN STEM <br> CONNECTICUT, USA
+        </p>
+        <img src="../images/Mail-Icon-White-on-Grey.jpg" style="width:65px; height:65px">
+    </footer>
 </body>
-</html>
