Add some styling rules to the lesson page

--- a/javascript/js1.html
+++ b/javascript/js1.html
@@ -13,12 +13,26 @@
     <nav class="nav-top">
         <ul class="nav-top-ul">
             <!-- TODO: Fill in links -->
-            <li><b><a href="#" class="nav-top-link">Home</a></b></li>
+            <li><b><a href="../index.html" class="nav-top-link">Home</a></b></li>
             <li><b><a href="#" class="nav-top-link">Learn to Code</a></b></li>
             <li><b><a href="#" class="nav-top-link">About</a></b></li>
         </ul>
     </nav>
-    
+
+    <section class="section-1">
+        <h1>JavaScript</h1>
+        <p>
+            JavaScript (JS) is an incredibly widespread and popular
+            programming language that is present in most of the
+            websites you have ever visited. JS allows for greater
+            interactivity with the user of a website, including things
+            we take for granted in websites today, like playing audio,
+            playing video, animating certain elements, and even drop-down
+            menus! The language is easy to get started with and is
+            used in both front and back-end development professionally.
+        </p>
+    </section>
+
     <footer>
         <p>
             NEXT GEN STEM <br> CONNECTICUT, USA
