--- a/index.html
+++ b/index.html
@@ -47,13 +47,13 @@
     <nav class="nav-bottom">
         <ul class="nav-bottom-ul">
             <!-- TODO: Fill in links once we get the courses up -->
-            <li><a href="javascript/js1.html" class="nav-bottom-link" id="javascript">JAVASCRIPT</a></li>
+            <li class="nav-bottom-effect"><a href="javascript/js1.html" class="nav-bottom-link" id="javascript">JAVASCRIPT</a></li>
 
-            <li><a href="#" class="nav-bottom-link" id="htmlcss">HTML+CSS</a></li>
+            <li class="nav-bottom-effect"><a href="#" class="nav-bottom-link" id="htmlcss">HTML+CSS</a></li>
 
-            <li><a href="#" class="nav-bottom-link" id="python">PYTHON</a></li>
+            <li class="nav-bottom-effect"><a href="#" class="nav-bottom-link" id="python">PYTHON</a></li>
 
-            <li><a href="#" class="nav-bottom-link" id="java">JAVA</a></li>
+            <li class="nav-bottom-effect"><a href="#" class="nav-bottom-link" id="java">JAVA</a></li>
         </ul>
     </nav>
     <footer>
