Added links to learntocode.html

--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
         <ul class="nav-top-ul">
             <!-- TODO: Fill in links -->
             <li><b><a href="#" class="nav-top-link">Home</a></b></li>
-            <li><b><a href="#" class="nav-top-link">Learn to Code</a></b></li>
+            <li><b><a href="learntocode.html" class="nav-top-link">Learn to Code</a></b></li>
             <li><b><a href="#" class="nav-top-link">About</a></b></li>
         </ul>
     </nav>
     <header class="homepage-header">
         <h1>NEXT GEN STEM</h1>
         <p>Leading the next generation of STEM students</p>
-        <a href="#"><button class="homepage-header-button">Learn to Code</button></a>
+        <a href="learntocode.html"><button class="homepage-header-button">Learn to Code</button></a>
     </header>
     <section>
         <p class="homepage-p">
