Fix Media Querries

--- a/learntocode.html
+++ b/learntocode.html
@@ -18,7 +18,7 @@
     <nav class="nav-top">
         <ul class="nav-top-ul">
             <!-- TODO: Fill in links -->
-            <li><b><a href="#" class="nav-top-link">Home</a></b></li>
+            <li><b><a href="index.html" class="nav-top-link">Home</a></b></li>
             <li><b><a href="#" class="nav-top-link">Learn to Code</a></b></li>
             <li><b><a href="#" class="nav-top-link">About</a></b></li>
         </ul>
