--- a/index.html
+++ b/index.html
@@ -60,7 +60,9 @@
         <p>
             NEXT GEN STEM <br> CONNECTICUT, USA
         </p>
-        <img src="images/Mail-Icon-White-on-Grey.jpg" style="width:65px; height:65px">
+         <a href="mailto:thenextgenstem@gmail.com">
+            <img src="images/Mail-Icon-White-on-Grey.jpg" style="width:65px; height:65px">
+        </a>
     </footer>
 </body>
 <!-- TODO: put the stuff below in the <body> tag -->
