Added course page styling

--- a/javascript/js1.html
+++ b/javascript/js1.html
@@ -33,6 +33,41 @@
         </p>
     </section>
 
+    <section class="section-2">
+        <h2>This Course</h2>
+        <p>
+            This course will focus on the fundemental aspects of JavaScript 
+            to get you a basic understanding of the language. The end project
+            is a simple game that you can run in your browser.
+        </p>
+        <p>Requirements:</p>
+        <ol>
+            <li>a computer on which you can create files</li>
+            <li>a text editor</li>
+            <li>a browser</li>
+        </ol>
+        <p>
+            <!-- TODO: Style link -->
+            <!-- TODO: Add the bottom navigation panel -->
+            To develop code more easily, most developers use a program 
+            called an Integrated Development Environment (IDE), which 
+            has many useful features, like a debugger and syntax highlighting. 
+            An IDE is not necessary for learning the basics of JS, but it is 
+            very convenient. This course will make use of the 
+            <a href="https://code.visualstudio.com" target="_blank">Visual Studio 
+            Code</a>, text editor because it is free and versatile. If you like, 
+            you could use any other editor or IDE suitable for developing JavaScript, 
+            like Atom or Sublime Text. For the purposes of learning, you could 
+            even use an online tool, like <a href="https://jsfiddle.net" target="_blank">
+            https://jsfiddle.net</a>, to run simple 
+            JS code. Search something like “run js online” for more options. 
+            You could even write code in a simple text document, if you wanted to.
+        </p>
+    </section>
+    <nav>
+        Put a nav panel here
+    </nav>
+
     <footer>
         <p>
             NEXT GEN STEM <br> CONNECTICUT, USA
