Added course nav bar css

--- a/index.html
+++ b/index.html
@@ -47,13 +47,13 @@
     <nav class="nav-bottom">
         <ul class="nav-bottom-ul">
             <!-- TODO: Fill in links once we get the courses up -->
-            <li class="nav-bottom-effect"><a href="javascript/js1.html" class="nav-bottom-link" id="javascript">JAVASCRIPT</a></li>
+            <li><a href="javascript/js1.html" class="nav-bottom-link" id="javascript">JAVASCRIPT</a></li>
 
-            <li class="nav-bottom-effect"><a href="#" class="nav-bottom-link" id="htmlcss">HTML+CSS</a></li>
+            <li><a href="#" class="nav-bottom-link" id="htmlcss">HTML+CSS</a></li>
 
-            <li class="nav-bottom-effect"><a href="#" class="nav-bottom-link" id="python">PYTHON</a></li>
+            <li><a href="#" class="nav-bottom-link" id="python">PYTHON</a></li>
 
-            <li class="nav-bottom-effect"><a href="#" class="nav-bottom-link" id="java">JAVA</a></li>
+            <li><a href="#" class="nav-bottom-link" id="java">JAVA</a></li>
         </ul>
     </nav>
     <footer>
@@ -66,7 +66,8 @@
     </footer>
 </body>
 <!-- TODO: put the stuff below in the <body> tag -->
-<div id="app_settings" style="display:none;">
+<!-- 
+    <div id="app_settings" style="display:none;">
 
     <label class='app_text_label'>Chat SiteID: </label>
     <input class='app_field_input' type="text" name="siteID"><br>
@@ -85,7 +86,7 @@
         dashboard) -> Property Settings -> Site ID. </label>
 
 </div>
-
+ -->
 <!-- 
     <script type="text/javascript">
    
