--- a/javascript/js1.html
+++ b/javascript/js1.html
@@ -32,7 +32,7 @@
             used in both front and back-end development professionally.
         </p>
     </section>
-
+    <hr class="hr-1">
     <section class="section-1">
         <h2>This Course</h2>
         <p>
@@ -64,8 +64,20 @@
             You could even write code in a simple text document, if you wanted to.
         </p>
     </section>
-    <nav>
-        Put a nav panel here
+    <nav class="course-nav">
+        <ul>
+            <li><a href="js1.html">Home</a></li>
+            <li><a href="#">Lesson 1</a></li>
+            <li><a href="#">Lesson 2</a></li>
+            <li><a href="#">Lesson 3</a></li>
+            <li><a href="#">Lesson 4</a></li>
+            <li><a href="#">Lesson 5</a></li>
+            <li><a href="#">Lesson 6</a></li>
+            <li><a href="#">Lesson 7</a></li>
+            <li><a href="#">Lesson 8</a></li>
+            <li><a href="#">Lesson 9</a></li>
+            <li><a href="#">Lesson 10</a></li>
+        </ul>
     </nav>
 
     <footer>
