Edit the lesson nav bar text

--- a/javascript/js1.html
+++ b/javascript/js1.html
@@ -83,7 +83,7 @@
 
     <nav class="course-nav">
         <ul>
-            <li><a href="js1.html">Home</a></li>
+            <li><a href="js1.html">Introduction</a></li>
             <li><a href="#">Lesson 1</a></li>
             <li><a href="#">Lesson 2</a></li>
             <li><a href="#">Lesson 3</a></li>
