--- a/javascript/js1.html
+++ b/javascript/js1.html
@@ -32,7 +32,9 @@
             used in both front and back-end development professionally.
         </p>
     </section>
+
     <hr class="hr-1">
+
     <section class="section-1">
         <h2>This Course</h2>
         <p>
@@ -65,18 +67,31 @@
         </p>
     </section>
 
-    <!-- TODO: maybe use <script> tag to set left margin of code blocks -->
+    <hr class="hr-1">
+
+    <section class="section-1">
+        <p>
+            Throughout this course, you will see code snippets like the example below.
+            Highlighted code will be used to represent code that will be written in that
+            step. Ellipses will be used to show that there is code not shown between the
+            code snippets. You can scroll horizontally if you can't see all the code. 
+            You can safely copy and paste the code, but I recommend writing
+            all of it out. Remember: <b>The best way to learn to code is by coding and trying 
+            things out yourself</b>.
+        </p>
+    </section>
+
     <section class="code">
         <pre>
             <code>let playerScore = 0; </code>
             <code>let opponentScore = 0; </code>
             <p>...</p>
-            <code>function drawScore() { </code>
-            <code>context.font = "64px Courier New"; </code>
-            <code>context.textAlign = "center"; </code>
-            <code>context.fillStyle = "e0e0e0"; </code>
-            <code>context.fillText(`${playerScore} ${opponentScore}`, canvas.width / 2, 60);</code>
-            <code>}</code>
+            <code class="hl">function drawScore() { </code>
+            <code class="hl">   context.font = "64px Courier New"; </code>
+            <code class="hl">   context.textAlign = "center"; </code>
+            <code class="hl">   context.fillStyle = "e0e0e0"; </code>
+            <code class="hl">   context.fillText(`${playerScore} ${opponentScore}`, canvas.width / 2, 60);</code>
+            <code class="hl">}</code>
         </pre>
         <!-- TODO: possibly set the left margin of the code block with JS -->
     </section>
