--- a/javascript/js1.html
+++ b/javascript/js1.html
@@ -99,16 +99,16 @@
     <nav class="course-nav">
         <ul>
             <li><a href="js1.html">Introduction</a></li>
-            <li><a href="#">Lesson 1</a></li>
-            <li><a href="#">Lesson 2</a></li>
-            <li><a href="#">Lesson 3</a></li>
-            <li><a href="#">Lesson 4</a></li>
-            <li><a href="#">Lesson 5</a></li>
-            <li><a href="#">Lesson 6</a></li>
-            <li><a href="#">Lesson 7</a></li>
-            <li><a href="#">Lesson 8</a></li>
-            <li><a href="#">Lesson 9</a></li>
-            <li><a href="#">Lesson 10</a></li>
+            <li><a href="js2.html">Lesson 1</a></li>
+            <li><a href="js3.html">Lesson 2</a></li>
+            <li><a href="js4.html">Lesson 3</a></li>
+            <li><a href="js5.html">Lesson 4</a></li>
+            <li><a href="js6.html">Lesson 5</a></li>
+            <li><a href="js7.html">Lesson 6</a></li>
+            <li><a href="js8.html">Lesson 7</a></li>
+            <li><a href="js9.html">Lesson 8</a></li>
+            <li><a href="js10.html">Lesson 9</a></li>
+            <li><a href="js11.html">Lesson 10</a></li>
         </ul>
     </nav>
 
