--- a/about.html
+++ b/about.html
@@ -57,7 +57,7 @@
             <p class="link">
                 <a href="https://services.google.com/fh/files/misc/trends-in-the-state-of-computer-science-report.pdf">Google's study on computer science in our schools.</a>
             </p>
-                <p class="feedback">
+                <p class="feedback2">
                     <b>Let us know what you think and what you would like to see next!</b>
                 </p>
                 <!--Email Button-->
@@ -171,4 +171,3 @@
     -->
 
 </html>
-
