--- a/learntocode.html
+++ b/learntocode.html
@@ -77,7 +77,7 @@
         <div>
             <a href="mailto:thenextgenstem@gmail.com"><button class="email-button">thenextgenstem@gmail.com</button></a>
           </div>
-    </section>>
+    </section>
     <section class="courses">
         <div>Coding Courses</div>
     </section>
