--- a/video-lesson-template.html
+++ b/video-lesson-template.html
@@ -23,22 +23,21 @@
             <li><b><a href="#" class="nav-top-link">About</a></b></li>
         </ul>
     </nav>
-    
-    <section>
-        <h2 class="homepage-h2">
+
+    <section class="section-1">
+        <h1>
             <!-- Lesson Name -->
-            <b>Lesson...</b>
-        </h2>
-        <section>
-            <p class="coding-info">
+            Lesson...
+        </h1>
+        <p>
             <!-- Info on your lesson. Copy and paste from folder or nextenstem.co under your section -->
-            info...                
-            </p>
-        </section>
+            info...
+        </p>
     </section>
-    <section class="video">
-          <!-- Copy and paste this buy going to the respective YouTube lesson and clicking "share"-> "embed" -->
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/hMc8naeeSS8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <section class="section-1">
+        <!-- Copy and paste this buy going to the respective YouTube lesson and clicking "share"-> "embed" -->
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/hMc8naeeSS8" frameborder="0"
+            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </section>
     <footer>
         <nav class="course-nav">
