Edit video style

--- a/video-lesson-template.html
+++ b/video-lesson-template.html
@@ -34,10 +34,10 @@
             info...
         </p>
     </section>
-
+    
     <section class="section-1">
         <!-- Copy and paste this buy going to the respective YouTube lesson and clicking "share"-> "embed" -->
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/hMc8naeeSS8" frameborder="0"
+        <iframe src="https://www.youtube.com/embed/hMc8naeeSS8" frameborder="0"
             allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </section>
 
@@ -64,5 +64,4 @@
         <img src="images/Mail-Icon-White-on-Grey.jpg" style="width:65px; height:65px">
     </footer>
 </body>
-
 </html>
