--- a/javascript/js1.html
+++ b/javascript/js1.html
@@ -1,10 +1,11 @@
+<!DOCTYPE html>
+<html lang="en-US">
+
 <head>
     <meta charset="utf-8" />
     <meta name="keywords" content="HTML, CSS, JavaScript, Java, Python" />
     <meta name="description" content="Free programming tutorials" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;1,500&display=swap"
-        rel="stylesheet" />
     <link rel="stylesheet" href="../style.css" />
     <title>Next Gen Stem</title>
 </head>
@@ -12,10 +13,9 @@
 <body>
     <nav class="nav-top">
         <ul class="nav-top-ul">
-            <!-- TODO: Fill in links -->
             <li><b><a href="../index.html" class="nav-top-link">Home</a></b></li>
             <li><b><a href="../learntocode.html" class="nav-top-link">Learn to Code</a></b></li>
-            <li><b><a href="#" class="nav-top-link">About</a></b></li>
+            <li><b><a href="../about.html" class="nav-top-link">About</a></b></li>
         </ul>
     </nav>
 
@@ -74,10 +74,10 @@
             Throughout this course, you will see code snippets like the example below.
             Highlighted code will be used to represent code that will be written in that
             step. Ellipses will be used to show that there is code not shown between the
-            code snippets. You can scroll horizontally if you can't see all the code. 
+            code snippets. You can scroll horizontally if you can't see all the code.
             You can safely copy and paste the code, but I recommend writing
-            all of it out. Remember: <b>The best way to learn to code is by coding and trying 
-            things out yourself</b>.
+            all of it out. Remember: <b>The best way to learn to code is by coding and trying
+                things out yourself</b>.
         </p>
     </section>
 
@@ -119,3 +119,5 @@
         <img src="../images/Mail-Icon-White-on-Grey.jpg" style="width:65px; height:65px">
     </footer>
 </body>
+
+</html>
