--- a/course-landing-page-template.html
+++ b/course-landing-page-template.html
@@ -90,8 +90,8 @@
             <li><a href="#">Lesson 6</a></li>
             <li><a href="#">Lesson 7</a></li>
             <li><a href="#">Lesson 8</a></li>
-            <li><a href="j#">Lesson 9</a></li>
-            <li><a href="j#">Lesson 10</a></li>
+            <li><a href="#">Lesson 9</a></li>
+            <li><a href="#">Lesson 10</a></li>
         </ul>
     </nav>
 
