Update video template

--- a/Coding Templates/video-course-template.html
+++ b/Coding Templates/video-course-template.html
@@ -10,7 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;1,500&display=swap"
         rel="stylesheet" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="../style.css" />
     <title>Next Gen Stem</title>
 </head>
 
@@ -18,9 +18,9 @@
     <nav class="nav-top">
         <ul class="nav-top-ul">
             <!-- TODO: Fill in links -->
-            <li><b><a href="#" class="nav-top-link">Home</a></b></li>
-            <li><b><a href="#" class="nav-top-link">Learn to Code</a></b></li>
-            <li><b><a href="#" class="nav-top-link">About</a></b></li>
+            <li><b><a href="../index.html" class="nav-top-link">Home</a></b></li>
+            <li><b><a href="../learntocode.html" class="nav-top-link">Learn to Code</a></b></li>
+            <li><b><a href="../about.html" class="nav-top-link">About</a></b></li>
         </ul>
     </nav>
 
@@ -62,7 +62,7 @@
         <p>
             NEXT GEN STEM <br> CONNECTICUT, USA
         </p>
-        <img src="images/Mail-Icon-White-on-Grey.jpg" style="width:65px; height:65px">
+        <img src="../images/Mail-Icon-White-on-Grey.jpg" style="width:65px; height:65px">
     </footer>
 </body>
 
