Deleted code on python page

--- a/python/CourseLandingPage.html
+++ b/python/CourseLandingPage.html
@@ -6,7 +6,7 @@
     <meta name="keywords" content="HTML, CSS, JavaScript, Java, Python" />
     <meta name="description" content="Free programming tutorials" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../style.css" />
+    <link rel="stylesheet" href="style.css" />
     <title>Next Gen Stem</title>
 </head>
 
@@ -21,7 +21,7 @@
 
     <section class="section-1">
         <!-- Course Name -->
-        <h1>Language...</h1>
+        <h1>Python</h1>
         <p>
             <!-- Info on your language. Copy and paste from folder or nextenstem.co under your section -->
             Python is one of the most broad and diverse programming languages used today. Although
@@ -49,7 +49,7 @@
         </ol>
     </section>
 
-    <!-- Example code block -->
+    <!-- Example code block 
     <section class="code">
         <pre>
             <code>let playerScore = 0; </code>
@@ -62,7 +62,7 @@
             <code class="hl">   context.fillText(`${playerScore} ${opponentScore}`, canvas.width / 2, 60);</code>
             <code class="hl">}</code>
         </pre>
-    </section>
+    </section> -->
 
     <!-- Add the appropriate links to each <a> tag -->
     <section class="next-previous-wrapper">
