Updated python homepage

--- a/python/CourseLandingPage.html
+++ b/python/CourseLandingPage.html
@@ -6,7 +6,7 @@
     <meta name="keywords" content="HTML, CSS, JavaScript, Java, Python" />
     <meta name="description" content="Free programming tutorials" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="../style.css" />
     <title>Next Gen Stem</title>
 </head>
 
@@ -21,11 +21,9 @@
 
     <section class="section-1">
         <!-- Course Name -->
-<<<<<<< HEAD
+
         <h1>Python</h1>
-=======
-        <h1>...</h1>
->>>>>>> 2ba39e55db0bdbbba838a3fcdc83df3587b21874
+
         <p>
             <!-- Info on your language. Copy and paste from folder or nextenstem.co under your section -->
             Python is one of the most broad and diverse programming languages used today. Although
@@ -47,9 +45,9 @@
         </p>
         <!-- Course Reqs. Copy and paste from folder or nextenstem.co under your section-->
         <ol>
-            <li>1) A computer on which you can create files (it would help if you could download software on it as well)</li>
-            <li>2) Python Idle code writing software</li>
-            <li>3) A browser </li>
+            <li>A computer on which you can create files (it would help if you could download software on it as well)</li>
+            <li>Python Idle code writing software</li>
+            <li>A browser </li>
         </ol>
     </section>
 
@@ -84,10 +82,7 @@
             <li><a href="#">Lesson 4</a></li>
             <li><a href="#">Lesson 5</a></li>
             <li><a href="#">Lesson 6</a></li>
-            <li><a href="#">Lesson 7</a></li>
-            <li><a href="#">Lesson 8</a></li>
-            <li><a href="#">Lesson 9</a></li>
-            <li><a href="#">Lesson 10</a></li>
+
         </ul>
     </nav>
 
