--- a/python/CourseLandingPage.html
+++ b/python/CourseLandingPage.html
@@ -68,17 +68,16 @@
 
     <!-- Add the appropriate links to each <a> tag -->
     <section class="next-previous-wrapper">
-        <a href="#">&lt; Previous</a>
-        <a href="#">Next &gt;</a>
+        <a href="Lesson1.html">Next &gt;</a>
     </section>
 
     <nav class="course-nav">
         <ul>
             <!-- Replace # with html file names of pages -->
             <li><a href="course-landing-page-template.html">Introduction</a></li>
-            <li><a href="#">Lesson 1</a></li>
-            <li><a href="#">Lesson 2</a></li>
-            <li><a href="#">Lesson 3</a></li>
+            <li><a href="Lesson1.html">Lesson 1</a></li>
+            <li><a href="Lesson2.html">Lesson 2</a></li>
+            <li><a href="Lesson3.html">Lesson 3</a></li>
             <li><a href="#">Lesson 4</a></li>
             <li><a href="#">Lesson 5</a></li>
             <li><a href="#">Lesson 6</a></li>
