--- a/python/Lesson3.html
+++ b/python/Lesson3.html
@@ -22,25 +22,26 @@
     <section class="section-1">
         <h1>
             <!-- Lesson Name -->
-            Lesson 1 - Introduction
+            Lesson 3 - Variables
         </h1>
         <p>
             <!-- Info on your lesson. Copy and paste from folder or nextenstem.co under your section -->
-            This introductory lesson will simply go over how to obtain Python Idle in order to 
-            write and run Python Code.
+            In this lesson, we will learn about which is one of the most vital parts about the Python language 
+            by defining information. Skills in this lesson will ultimately be a very important predecessor to 
+            later lessons.
         </p>
     </section>
 
     <section class="section-1">
         <!-- Copy and paste this buy going to the respective YouTube lesson and clicking "share"-> "embed" -->
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/OcXmT8VxUPY" frameborder="0" 
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/_QN3zt8Le1I" frameborder="0" 
             allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </section>
 
     <!-- Add the appropriate links to each <a> tag -->
     <section class="next-previous-wrapper">
-        <a href="CourseLandingPage.html">&lt; Previous</a>
-        <a href="Lesson2.html">Next &gt;</a>
+        <a href="Lesson2.html">&lt; Previous</a>
+        <a href="#">Next &gt;</a>
     </section>
 
     <nav class="course-nav">
