--- a/python/Lesson2.html
+++ b/python/Lesson2.html
@@ -22,25 +22,25 @@
     <section class="section-1">
         <h1>
             <!-- Lesson Name -->
-            Lesson 1 - Introduction
+            Lesson 2 - "Hello World"
         </h1>
         <p>
             <!-- Info on your lesson. Copy and paste from folder or nextenstem.co under your section -->
-            This introductory lesson will simply go over how to obtain Python Idle in order to 
-            write and run Python Code.
+            In this short lesson we will be learning the basic “Hello World” program. The purpose of this 
+            lesson is to learn basic Python programming functions and how to save these programs.
         </p>
     </section>
 
     <section class="section-1">
         <!-- Copy and paste this buy going to the respective YouTube lesson and clicking "share"-> "embed" -->
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/OcXmT8VxUPY" frameborder="0" 
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/XhpHhrln82k" frameborder="0" 
             allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </section>
 
     <!-- Add the appropriate links to each <a> tag -->
     <section class="next-previous-wrapper">
-        <a href="CourseLandingPage.html">&lt; Previous</a>
-        <a href="Lesson2.html">Next &gt;</a>
+        <a href="Lesson1.html">&lt; Previous</a>
+        <a href="Lesson3.html">Next &gt;</a>
     </section>
 
     <nav class="course-nav">
