--- a/python/Lesson6.html
+++ b/python/Lesson6.html
@@ -22,26 +22,26 @@
     <section class="section-1">
         <h1>
             <!-- Lesson Name -->
-            Lesson 3 - Variables
+            Lesson 6 - Word Guessing Game (Final Project)
         </h1>
         <p>
             <!-- Info on your lesson. Copy and paste from folder or nextenstem.co under your section -->
-            In this lesson, we will learn about variables which is one of the most vital parts of the Python language 
-            by defining information. Skills in this lesson will ultimately be a very important predecessor to 
-            later lessons.
+            In this final lesson we will be using our previous knowledge in functions and variables to create 
+            a Word Guessing Game! This simple game provides a clear example to the wide functionality of the Python language. ​
+
+            Upon completion, please send a screenshot of your final project to our email to receive your completion certificate!
         </p>
     </section>
 
     <section class="section-1">
         <!-- Copy and paste this buy going to the respective YouTube lesson and clicking "share"-> "embed" -->
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/_QN3zt8Le1I" frameborder="0" 
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/xdwBYyrtKzQ" frameborder="0" 
             allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </section>
 
     <!-- Add the appropriate links to each <a> tag -->
     <section class="next-previous-wrapper">
-        <a href="Lesson2.html">&lt; Previous</a>
-        <a href="Lesson4.html">Next &gt;</a>
+        <a href="Lesson5.html">&lt; Previous</a>
     </section>
 
     <nav class="course-nav">
