Add python course link to index.html

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
             <li><a href="#" class="nav-bottom-link" id="htmlcss">HTML+CSS</a></li>
 
-            <li><a href="#" class="nav-bottom-link" id="python">PYTHON</a></li>
+            <li><a href="python/CourseLandingPage.html" class="nav-bottom-link" id="python">PYTHON</a></li>
 
             <li><a href="#" class="nav-bottom-link" id="java">JAVA</a></li>
         </ul>
