--- a/python/Lesson2.html
+++ b/python/Lesson2.html
@@ -37,6 +37,12 @@
             allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </section>
 
+    <section class="code">
+        <pre>
+            <code>print("Hello World")</code>
+        </pre>
+    </section>
+
     <!-- Add the appropriate links to each <a> tag -->
     <section class="next-previous-wrapper">
         <a href="Lesson1.html">&lt; Previous</a>
