Added code blocks

--- a/python/Lesson4.html
+++ b/python/Lesson4.html
@@ -37,6 +37,17 @@
             allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </section>
 
+    <section class="code">
+        <pre>
+            <code>my_name = input("What is your name? ")</code>
+            <code>print("Hello ", my_name)</code>
+            <code>my_age = int(input("How old are you? "))</code>
+            <code>my_age - "18"</code>
+            <code>print("Wow, you are ", my_age, "years old")</code>
+            <code>print(3*my_age)</code>
+        </pre>
+    </section>
+
     <!-- Add the appropriate links to each <a> tag -->
     <section class="next-previous-wrapper">
         <a href="Lesson3.html">&lt; Previous</a>
