Added code blocks

--- a/python/Lesson5.html
+++ b/python/Lesson5.html
@@ -37,6 +37,16 @@
             allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </section>
 
+    <section class="code">
+        <pre>
+            <code>x = int(input("How old are you? "))</code>
+            <code>if x > 65:</code>
+            <code>  print("Wow! You are older than 65!")</code>
+            <code>else:</code>
+            <code>  print("You are younger than 65!")</code>
+        </pre>
+    </section>
+
     <!-- Add the appropriate links to each <a> tag -->
     <section class="next-previous-wrapper">
         <a href="Lesson4.html">&lt; Previous</a>
