--- a/python/Lesson3.html
+++ b/python/Lesson3.html
@@ -38,6 +38,17 @@
             allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </section>
 
+    <section class="code">
+        <pre>
+            <code>my_name = "Python Lesson"</code>
+            <code>print(my_name)</code>
+            <code>my_age = 17</code>
+            <code>print(3*my_age)</code>
+            <code>print(my_age)</code>
+            <code>print("I am ", my_age, " years old")</code>
+        </pre>
+    </section>
+
     <!-- Add the appropriate links to each <a> tag -->
     <section class="next-previous-wrapper">
         <a href="Lesson2.html">&lt; Previous</a>
